# quickstart-resources

./: .gitignore
weather-server-python/: agent.ipynb  pyproject.toml  pyzotero_try.ipynb  weather.py
weather-server-python/.ipynb_checkpoints/: output-checkpoint.md  pyzotero_try-checkpoint.ipynb
