[project]
name = "weather"
version = "0.1.0"
description = "A simple MCP weather server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.5",
    "markitdown>=0.0.1a3",
    "mcp[cli]>=1.2.0",
    "pubmedmcp>=0.1.3",
    "python-dotenv>=1.0.1",
    "pyzotero>=1.6.8",
    "smolagents[mcp,openai]>=1.8.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
weather = "weather:main"

